# roag

./: .gitignore  .gitmodules
src/backend/gameManagementService/: Cargo.toml  docker-compose.yml
src/backend/gameManagementService/src/: main.rs
src/backend/gameManagementService/src/controller/: health_check_controller.rs  mod.rs  room_controller.rs
src/backend/gameManagementService/src/infrastructure/persistence/migrations/2025-04-18-133709_create_players_rooms_room_players/: down.sql  up.sql
src/backend/gameManagementService/src/infrastructure/persistence/room_repository/: room_repository.rs
src/frontend/gameUI/: package.json
src/frontend/gameUIService/: package.json
src/frontend/game_ui_service/: hardhat.config.js  package-lock.json  package.json
