[package]
name = "gameManagementService"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }                       # Change here
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
